nuclearbomb/namespaces/media/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      nodeSelector:
        kubernetes.io/hostname: 309c23e693a5
      containers:
        - image: haugene/transmission-openvpn:5.3.2
          name: transmission
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - containerPort: 9091
          resources:
            limits:
              memory: 512Mi
              ephemeral-storage: 1Gi
              cpu: "3"
            requests:
              cpu: 500m
              memory: 64Mi
      volumes:
        - name: data
          nfs:
            server: 192.168.4.38
            path: /mnt/meow/transmission/cache
            readOnly: false
      securityContext:
        fsGroup: 1000
