nuclearbomb/namespaces/media/transmission/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  namespace: media
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "transmission.hiibolt.com"
  rules:
    - backendRefs:
        - name: transmission
          port: 9091
